# llm-firewall

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  simulate.py
.github/workflows/: ci.yml
dashboard/: README.md  index.html
data/input_classifier/datasets/: eval_davidtkeane.parquet  eval_jailbreakbench.parquet  manifest.json  sources.json  test.parquet  train.parquet  val.parquet
data/input_classifier/eval/: prompt_guard_2.json  prompt_guard_2_scores.parquet  protectai_deberta.json  svm_baseline.json  svm_baseline_spanish.json
data/models/: linear_svm_spanish.pkl
docs/input_classifier/: README.md  datasets.md  evaluation.md  models.md  reproducibility.md
examples/: README.md  batch_prompts.json  batch_prompts_100.json
llm_firewall/: __init__.py  classifiers.py  main.py  model_registry.py  pii_filter.py
llm_firewall/api/: __init__.py  _processing.py  app.py  conversations.py  dashboard.py  dummy_llm.py  events.py  routes.py
llm_firewall/classifiers/: __init__.py  ensemble.py  huggingface.py  language_router.py  pickle_classifier.py  registry.py
llm_firewall/core/: __init__.py  config.py  proxy.py
llm_firewall/filters/: __init__.py  base.py  pii.py  pii_filter.py  toxicity_filter.py
llm_firewall/validators/: __init__.py  input.py  input_validator.py  output.py
models/input/: linear_svm_input_classifier.pkl
scripts/: capture_dashboard_screenshots.py  simulate.py
scripts/input_classifier/: README.md  build_dataset.py  evaluate.py  generate_visualizations.py
tests/: conftest.py  fake_models.py  test_classifiers.py  test_input_validator.py  test_integration.py  test_model_registry.py  test_output_validator.py  test_proxy.py
tests/integration/: test_integration.py  test_proxy.py
tests/unit/: test_config.py  test_conversations.py  test_dummy_llm.py  test_ensemble.py  test_hf_sequence_classifier.py  test_input_validator.py  test_language_router.py  test_output_validator.py  test_pii_filter.py  test_registry.py  test_sse_stream.py  test_toxicity_filter.py
