[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-firewall"
version = "0.2.0"
description = "OpenAI-compatible proxy that screens prompts and responses through input/output classifier ensembles."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Karim Elmasry" },
    { name = "Mennatallah Wael" },
    { name = "Abdelrhman Mohamed Abdelmoaty" },
    { name = "Shahd Wagdy" },
    { name = "Yosif Qassim" },
]
keywords = ["llm", "firewall", "prompt-injection", "fastapi", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "safetensors>=0.4.3",
    "pydantic-settings>=2.2.0",
    "fasttext-wheel>=0.9.2",
    "lingua-language-detector>=2.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    # Offline tooling for the input-classifier dataset and eval pipeline.
    # Required only by scripts/input_classifier/*; not used at runtime.
    "datasets>=2.18.0",
    "pyarrow>=15.0.0",
]

[project.scripts]
llm-firewall = "llm_firewall.api.app:run"
llm-firewall-dummy = "llm_firewall.api.dummy_llm:run"

[project.urls]
Repository = "https://github.com/karimelmasry/llm-firewall"

[tool.setuptools.packages.find]
include = ["llm_firewall*"]
exclude = ["tests*", "scripts*"]

[tool.setuptools.package-data]
llm_firewall = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"
filterwarnings = [
    "ignore::DeprecationWarning",
]
